<?xml version="1.0"?>
<package format="2">
  <name>sick_safevisionary_driver</name>
  <version>0.0.0</version>
  <description>The sick_safevisionary_driver package</description>

  <maintainer email="grosse@todo.todo">grosse</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sick_safevisionary_base</depend>
  <depend>sick_safevisionary_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
