<?xml version="1.0"?>
<package format="2">
  <name>sick_safevisionary_driver</name>
  <version>1.0.1</version>
  <description>Provides an interface to read the sensor output of a SICK Safevisionary sensor in ROS.</description>

  <maintainer email="grosse@fzi.de">Marvin Grosse Besselmann</maintainer>
  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sick_safevisionary_base</depend>
  <depend>sick_safevisionary_msgs</depend>


  <export>

  </export>
</package>
