<?xml version="1.0"?>
<package format="2">
  <name>sick_safevisionary_msgs</name>
  <version>0.0.0</version>
  <description>The sick_safevisionary_msgs package</description>

  <maintainer email="grosse@todo.todo">grosse</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
