<?xml version="1.0"?>
<package format="2">
  <name>sick_safevisionary_msgs</name>
  <version>1.0.1</version>
  <description>Provides the interface descriptions to communicate with a SICk Safevisionary Sensor over ROS</description>

  <maintainer email="grosse@fzi.de">Marvin Grosse Besselmann</maintainer>
  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>


  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
